samples/_failures_safe/1761398692_0c83f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f56133b7.c: In function ‘main’:
./samples/SAFE/__tmp_f56133b7.c:180:5: error: expected identifier or ‘(’ at end of input
  180 |     for (size_t
      |     ^~~
./samples/SAFE/__tmp_f56133b7.c:180:5: error: expected declaration or statement at end of input
